--- a/Notification-API/Notification-API/src/main/resources/application.properties
+++ b/Notification-API/Notification-API/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=Product-Server
-server.port=9091
+spring.application.name=Notification-API
+server.port=9092
 
 spring.boot.admin.client.url=http://localhost:1111
 management.endpoints.web.exposure.include=*
