--- a/Product-Server/Product-Server/src/main/resources/application.properties
+++ b/Product-Server/Product-Server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Product-Server
-server.port=9091
+#server.port=9091
 
 spring.boot.admin.client.url=http://localhost:1111
 management.endpoints.web.exposure.include=*
